[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LevelSelect.gd" type="Script" id=1]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -250.0
margin_right = 271.0
margin_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 535.0
margin_bottom = 493.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 14.0
text = "Select a level to begin the game"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 528.0
margin_bottom = 372.0
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="LevelsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 528.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelButton" type="TextureButton" parent="PanelContainer/VBoxContainer/ScrollContainer/LevelsContainer"]
margin_right = 250.0
margin_bottom = 354.0
rect_min_size = Vector2( 250, 0 )

[node name="CurrentDifficultySelectedLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 528.0
margin_bottom = 390.0
text = "EASY"
align = 1
valign = 1

[node name="PointsAllowedLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 528.0
margin_bottom = 408.0
text = "Stat Allocation Points: 5"
align = 1
valign = 1

[node name="PointsAllowedLabel2" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
margin_top = 394.0
margin_right = 528.0
margin_bottom = 408.0
text = "Warning! Two random stats will be set to zero! Extremely difficult!"
align = 1
valign = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 412.0
margin_right = 528.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 50 )

[node name="EasyButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyContainer"]
margin_right = 129.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EASY"

[node name="MediumButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyContainer"]
margin_left = 133.0
margin_right = 262.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MEDIUM"

[node name="HardButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyContainer"]
margin_left = 266.0
margin_right = 395.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HARD"

[node name="ChaosButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyContainer"]
margin_left = 399.0
margin_right = 528.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CHAOS"

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 466.0
margin_right = 528.0
margin_bottom = 486.0
text = "Close"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ScrollContainer/LevelsContainer/LevelButton" to="." method="on_level_select" binds= [ "res://scenes/Main.tscn" ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyContainer/EasyButton" to="." method="on_difficulty_changed" binds= [ 5, "Easy" ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyContainer/MediumButton" to="." method="on_difficulty_changed" binds= [ 3, "Medium" ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyContainer/HardButton" to="." method="on_difficulty_changed" binds= [ 1, "Hard" ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyContainer/ChaosButton" to="." method="on_difficulty_changed" binds= [ 0, "Chaos" ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CloseButton" to="." method="set_visible" binds= [ false ]]
